# xr1-firmware

./: .gitignore  CMakeLists.txt  dependencies.txt  imgui.ini  platformio.ini
.github/workflows/: xr1-firmware.yml
include/: AudioConfig.h  Config.h  Fonts.h  XRAsyncIO.h  XRAsyncPSRAMLoader.h  XRAudio.h  XRAudioConfig.h  XRCV.h  XRClock.h  XRConfig.h  XRDexedManager.h  XRDisplay.h  XREncoder.h  XRFonts.h  XRHardware.h  XRHelpers.h  XRKeyInput.h  XRKeyMatrix.h  XRLED.h  XRMIDI.h  XRMain.h  XRMenu.h  XRSD.h  XRSequencer.h  XRSound.h  XRUX.h  XRVersa.h
lib/FastTouch/src/: CMakeLists.txt  FastTouch.cpp  FastTouch.h
lib/synth_braids/: analog_oscillator.cpp  analog_oscillator.h  digital_oscillator.cpp  digital_oscillator.h  excitation.h  macro_oscillator.cpp  macro_oscillator.h  resources.h  settings.cpp  settings.h  svf.h
lib/synth_braids/libraries/dsp/: dsp.h
lib/synth_braids/libraries/random/: random.h
lib/synth_dexed/: CMakeLists.txt
lib/synth_dexed/src/: dexed.cpp  dexed.h  fm_core.h
src/: XRAsyncIO.cpp  XRAsyncPSRAMLoader.cpp  XRAudio.cpp  XRAudioConfig.cpp  XRCV.cpp  XRClock.cpp  XRDexedManager.cpp  XRDisplay.cpp  XREncoder.cpp  XRHelpers.cpp  XRKeyInput.cpp  XRKeyMatrix.cpp  XRLED.cpp  XRMIDI.cpp  XRMain.cpp  XRMenu.cpp  XRSD.cpp  XRSequencer.cpp  XRSound.cpp  XRUX.cpp  XRVersa.cpp  main.cpp
